2013-05-07  Dario Rodriguez <dario@artica.es> 
2013-05-07  Vanessa Gil <vanessa.gil@artica.es>

	* operation/inventories/inventory_relationship.php,
	operation/inventories/inventory_detail.php,
	operation/inventories/inventory_search.php,
	operation/contacts/contact_detail.php,
	operation/manufacturers/manufacturer_detail.php,
	operation/incidents/incident_dashboard.php,
	operation/incidents/incident_tracking.php,
	operation/incidents/incident_detail.php,
	operation/incidents/incident_dashboard_detail.php,
	operation/contracts/contract_detail.php,
	integria_demo.sql,
	godmode/grupos/configurar_grupo.php,
	godmode/grupos/lista_grupos.php,
	include/ajax/inventories.php,
	include/functions_inventories.php,
	include/functions_calendar.php,
	include/functions_incidents.php: Bug hunting session lot
	of bug fixed related to inventory and incidents.

2013-05-06  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php,
	operation/incidents/incident_dashboard_detail.php: Displayed
	incident type fields with values on incident detail dashboard view.

2013-05-06  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css: Modified menu bar style.
	* include/graphs/functions_pchart.php: Fixed a bug related to
	antialiasing of graphs.
	* include/ajax/inventories.php: Added file header
	* include/functions_incidents.php
	include/functions.php
	include/js/integria_incident_search.js
	include/functions_form.php
	include/ajax/incidents.php
	operation/incidents/incident_search_logic.php
	operation/incidents/incident_statistics.php
	operation/incidents/incident_detail.php
	operation/incidents/incident_tracking.php
	operation/incidents/incident_dashboard_detail.php
	operation/group/group.php: Fixed several bugs,
	implemented incident parent search with popup. Changed menu bar
	text to icons.

2013-05-06  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_inventories.php
	  operation/incidents/incident_search.php
	  operation/inventories/inventory.php