@@ -871,3 +871,10 @@ function update_parent(id_parent) {
 	
 	$("#parent_search_window").dialog('close');
 }
+
+function clean_parent_field () {
+	console.log("paso");
+	$("#text-search_parent").val(__("None"));
+	$("#hidden-id_parent").attr("value", "");	
+
+}
