@@ -1,4 +1,10 @@
 2013-05-07  Dario Rodriguez <dario@artica.es> 
+
+	* operation/incidents/incident_detail.php,
+	include/js/integria_incident_search.js: Added a button
+	to clean parent incident field
+
+2013-05-07  Dario Rodriguez <dario@artica.es> 
 2013-05-07  Vanessa Gil <vanessa.gil@artica.es>
 
 	* operation/inventories/inventory_relationship.php,
